@@ -4,13 +4,13 @@ buildscript {
   repositories {
     jcenter()
     maven {
-      url 'http://dl.bintray.com/twcable/aem'
+      url 'http://dl.bintray.com/twcable/aem'                   // required by src/gradle/aem.gradle
     }
   }
 
   dependencies {
-    classpath 'com.twcable.gradle:cq-gradle-plugins:3.0.2'  //https://github.com/TWCable/cq-gradle-plugin
-    classpath 'be.filipblondeel.gradle:gradle-gulp-plugin:0.1'
+    classpath 'com.twcable.gradle:cq-gradle-plugins:3.0.2'      // required by src/gradle/aem.gradle
+    classpath 'be.filipblondeel.gradle:gradle-gulp-plugin:0.1'  // required by src/gradle/functional-test.gradle
   }
 }
 
@@ -23,14 +23,11 @@ repositories {
   }
 }
 
-apply plugin: 'java'
-apply from:   'src/gradle/integration-test.gradle'
 apply from:   'src/gradle/parse-config.gradle'
-apply plugin: 'scr'
-apply plugin: 'sling-bundle'
-apply plugin: 'cqpackage'
+apply from:   'src/gradle/aem.gradle'
+apply from:   'src/gradle/functional-test.gradle'
+apply from:   'src/gradle/jacoco.gradle'
 apply plugin: 'eclipse'
-apply plugin: 'gulp'
 
 dependencies {
   testCompile(
@@ -81,10 +78,6 @@ dependencies {
     [group: 'org.slf4j', name: 'slf4j-api', version:'1.5.11']
   )
 
-  if (!cfg.aem?.servers?.integration?.url) { // required if integration tests are going to be run in a remote server
-    integrationTestRuntime group: 'com.adobe.aem', name: 'cq-quickstart', version:'6.0.0', classifier:'standalone'
-  }
-
   //configurations.cq_package {
   //exclude group: 'javax.servlet', module: 'servlet-api'
   //}
@@ -96,103 +89,7 @@ jar {
   }
 }
 
-project.convention.slingServers.with { // configure cqpackage plugin
-  def cfg = owner.cfg
-
-  def applyConfig = { a -> return {
-      protocol = a.protocol
-      port = a.port
-      machineName = a.machineName
-      username = a.username
-      password = a.password
-      installPath = a.installPath
-      active = a.active
-  }}
-  author.with applyConfig(cfg.aem.servers.author)
-  publisher.with applyConfig(cfg.aem.servers.publisher)
-}
-
 createPackage {
   dependsOn assemble
   addProjectBundles()
 }
-
-task copyAdditionalBundles(type: Copy) {
-  from jar
-
-  if (!cfg.aem?.servers?.integration?.url) {
-    from configurations.integrationTestRuntime // AEM container not needed if running against a specific environment
-  }
-
-  into "$buildDir/sling/additional-bundles"
-}
-
-task copyLicense(type: Copy) {
-  from cfg.license.file
-  into "$buildDir/cq-quickstart"
-}
-
-integrationTest {
-  dependsOn copyAdditionalBundles, copyLicense
-
-  onOutput { descriptor, event -> logger.lifecycle(event.message) }  // listen to standard out and standard error
-
-  def randomPort = AvailablePortFinder.createPrivate().nextAvailable
-
-  if (cfg.aem?.servers?.integration?.url) {
-    systemProperty 'test.server.url', cfg.aem.servers.integration.url.toString()
-  }
-
-  file("$buildDir/cq-quickstart").mkdirs()  // Create jar.executor.work.folder
-
-  systemProperty 'test.server.username', cfg.aem.servers.integration.username
-  systemProperty 'test.server.password', cfg.aem.servers.integration.password
-  systemProperty 'jar.executor.server.port', randomPort
-  systemProperty 'jar.executor.jar.folder', "$buildDir/sling/additional-bundles"
-  systemProperty 'jar.executor.jar.name.regexp', 'cq-quickstart.*jar$'
-  systemProperty 'jar.executor.jar.options', "-p $randomPort -nobrowser -nofork -r $cfg.aem.servers.integration.runmodes"
-  systemProperty 'jar.executor.vm.options', '-XX:MaxPermSize=256m -Xmx1536M'
-  systemProperty 'jar.executor.work.folder', "$buildDir/cq-quickstart"
-
-  systemProperty 'server.ready.timeout.seconds', 6000
-  systemProperty 'sling.testing.timeout.multiplier', 1.0
-  systemProperty 'server.ready.path.1', "$cfg.aem.servers.integration.ready.path"
-  systemProperty 'start.bundles.timeout.seconds', 40
-  systemProperty 'bundle.install.timeout.seconds', 30
-
-  systemProperty 'additional.bundles.path',   "$buildDir/sling/additional-bundles"
-  systemProperty 'sling.additional.bundle.1', 'org.apache.sling.junit.core'
-  systemProperty 'sling.additional.bundle.2', 'org.apache.sling.junit.scriptable'
-  systemProperty 'sling.additional.bundle.3', 'org.apache.sling.junit.remote'
-  systemProperty 'sling.additional.bundle.4', 'org.apache.sling.testing.tools'
-  systemProperty 'sling.additional.bundle.5', 'httpclient-osgi'
-  systemProperty 'sling.additional.bundle.6', 'httpcore-osgi'
-  systemProperty 'sling.additional.bundle.7', jar.baseName
-}
-
-tasks.withType(Test) {
-  reports.html.destination = file("${reporting.baseDir}/${name}")
-}
-
-node {
-    // Version of node to use.
-    version = '0.12.0'
-
-    // Enabled the automatic download. False is the default (for now).
-    download = true
-}
-
-project.getProperty('gulp_functional-test').dependsOn(npmInstall)
-
-task functionalTest {
-  group = 'Verification'
-  description 'Runs the functional tests.'
-  if (project.hasProperty('integrationTest')) {
-    mustRunAfter integrationTest
-  } else {
-    shouldRunAfter test
-  }
-  dependsOn  "gulp_functional-test"
-}
-check.dependsOn functionalTest
-
